Create recipes page and add link to it in index

--- a/recipes/mac-and-cheese.html
+++ b/recipes/mac-and-cheese.html
@@ -7,7 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="/recipes/mac-and-cheese.html">Homemade Mac and Cheese</a>
+    <h1>Homemade Mac and Cheese</h1>
 </body>
 </html>
