--- a/recipes/mac-and-cheese.html
+++ b/recipes/mac-and-cheese.html
@@ -8,5 +8,25 @@
 </head>
 <body>
     <h1>Homemade Mac and Cheese</h1>
+    <img src="https://www.allrecipes.com/thmb/YrWDMIAOSx0o7xgfpLLNns8I9lk=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Homemade-Mac-and-Cheese-ffae3fa24a534094bdbccb7038ba4e81.jpg" alt="Mac and Cheese picture">
+    <h2>Description</h2>
+        <p>This recipe for Mac and Cheese will surely be a favorite at your next meal!</p>
+    <h2>Ingredients</h2>
+        <ul>
+            <li>Macaroni</li>
+            <li>Butter</li>
+            <li>Flour</li>
+            <li>Milk</li>
+            <li>Cheese</li>
+            <li>Seasonings</li>
+            <li>Bread crumbs</li>
+        </ul>
+    <h2>Steps</h2>
+        <ol>
+            <li>Boil the noodles</li>
+            <li>Make the cheese sauce</li>
+            <li>Make the topping</li>
+            <li>Bake the mac and cheese</li>
+        </ol>
 </body>
 </html>
