--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="/recipes/mac-and-cheese.html">Homemade Mac and Cheese</a>
-    <a href=""></a>
-    <a href=""></a>
+    <a href="/recipes/cornbread.html">Grandma's Cornbread Dressing</a>
+    <a href="/recipes/cranberry-sauce.html">Cranberry Sauce</a>
 </body>
 </html>
