--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="/recipes/mac-and-cheese.html">Homemade Mac and Cheese</a>
-    <a href="/recipes/cornbread.html">Grandma's Cornbread Dressing</a>
-    <a href="/recipes/cranberry-sauce.html">Cranberry Sauce</a>
+    <h1 class="title">Odin Recipes</h1>
+    <ul>
+        <li><a href="/recipes/mac-and-cheese.html">Homemade Mac and Cheese</a></li>
+        <li> <a href="/recipes/cornbread.html">Grandma's Cornbread Dressing</a></li>
+        <li><a href="/recipes/cranberry-sauce.html">Cranberry Sauce</a></li>
+    </ul>
 </body>
 </html>
